@@ -8,6 +8,7 @@ Bug fixes
 ~~~~~~~~~
 - #2264: allow unicode title and description in document types
 - #2059: new system to exclude a layout from rendering
+- #2271: FileObjectFactory moved to CPSSchemas
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
